# SecureFlow-stylus

./: .gitignore  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  README.md  STYLUS_CONVERSION.md  STYLUS_STATUS.md  deployed.json  hardhat.config.js
contracts/: SecureFlow.sol
contracts/interfaces/: ISecureFlow.sol
contracts/modules/: AdminFunctions.sol  Marketplace.sol  WorkLifecycle.sol
frontend/: next.config.mjs
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/create/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/freelancer/: page.tsx
frontend/app/jobs/: page.tsx
frontend/components/: error-suppressor.tsx  milestone-actions.tsx  wallet-button.tsx
frontend/components/admin/: dispute-resolution.tsx
frontend/components/create/: project-details-step.tsx
frontend/contexts/: delegation-context.tsx  smart-account-context.tsx  web3-context.tsx
frontend/hooks/: use-admin-status.ts  use-appkit-sync.ts  use-freelancer-status.ts  use-job-creator-status.ts  use-pending-approvals.ts  use-whitelisted-tokens.ts
frontend/public/: manifest.json
scripts/: deploy-mock-token-arbitrum-sepolia.js  deploy-stylus.js  deploy.js  init-contract.js
stylus/: .gitignore  Cargo.toml  DEPLOY.md  DEPLOYMENT_STATUS.md  DEPLOY_INSTRUCTIONS.md  QUICK_FIX.md  README.md  SDK_FIX.md  deploy.sh  init-contract.js  rust-toolchain.toml  update-config.js
stylus/src/: admin.rs  errors.rs  escrow.rs  helpers.rs  init.rs  lib.rs  lifecycle.rs  main.rs  marketplace.rs  public.rs  refund.rs  storage.rs  transfers.rs  types.rs  views.rs
(+4 files in other folders)
