[package]
name = "secureflow"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "secureflow"
path = "src/main.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]

[dependencies]
stylus-sdk = "0.6"
alloy-primitives = "0.7"
arbitrary = "1.3"
hex = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
debug = false       # No debug info
incremental = false # Disable incremental compilation

[profile.release.package."*"]
opt-level = "z"

